// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plain components render not found 1`] = `
<div>
  <h1>
    Not Found
  </h1>
</div>
`;

exports[`Plain components renders Item 1`] = `
<div>
  <figure
    class="item"
  >
    <img
      alt="loading"
      src="image"
    />
    <h2
      role="h2"
    >
      title
    </h2>
    <h3
      role="h3"
    >
      category
    </h3>
    <button>
       Add to cart 
    </button>
    <p
      role="p"
    >
      description
    </p>
  </figure>
</div>
`;

exports[`Plain components renders an item in an item list 1`] = `
<div>
  <section
    class="item-list"
  >
    <p
      class="item-list-title"
    >
      We found 
      1
       items.
    </p>
    <figure
      class="item-list-element"
    >
      <img
        alt="loading"
        src="itemListElement"
      />
      <button>
        Item Name
      </button>
    </figure>
  </section>
</div>
`;

exports[`Plain components renders cart element 1`] = `
<div>
  <section
    class="cart-element"
  >
    <p>
      Product Name
    </p>
    <form>
      <button
        class="cart-button"
      >
         - 
      </button>
      <input
        min="1"
        step="1"
        type="number"
      />
      <button
        class="cart-button"
      >
         + 
      </button>
    </form>
  </section>
</div>
`;

exports[`Plain components renders category list 1`] = `
<div>
  <section
    class="category-list"
  >
    <figure>
      <img
        alt="loading"
        src="category"
      />
      <h2>
         Category 
      </h2>
    </figure>
    <figure>
      <img
        alt="loading"
        src="category"
      />
      <h2>
         Category 
      </h2>
    </figure>
    <figure>
      <img
        alt="loading"
        src="category"
      />
      <h2>
         Category 
      </h2>
    </figure>
  </section>
</div>
`;

exports[`Plain components renders item list element 1`] = `
<div>
  <figure
    class="item-list-element"
  >
    <img
      alt="loading"
      src="itemListElement"
    />
    <button>
      Item Name
    </button>
  </figure>
</div>
`;

exports[`Plain components renders the card 1`] = `
<div>
  <section
    class="cart"
  >
    <section
      class="cart-element"
    >
      <p>
        Product Name
      </p>
      <form>
        <button
          class="cart-button"
        >
           - 
        </button>
        <input
          min="1"
          step="1"
          type="number"
        />
        <button
          class="cart-button"
        >
           + 
        </button>
      </form>
    </section>
    <section
      class="cart-element"
    >
      <p>
        Product Name
      </p>
      <form>
        <button
          class="cart-button"
        >
           - 
        </button>
        <input
          min="1"
          step="1"
          type="number"
        />
        <button
          class="cart-button"
        >
           + 
        </button>
      </form>
    </section>
  </section>
</div>
`;

exports[`Plain components renders the navbar 1`] = `
<div>
  <section
    class="navbar"
  >
    <article
      class="navbar-buttons"
    >
      <button>
        Home
      </button>
      <button>
        Cart
      </button>
    </article>
    <form
      class="search-bar"
    >
      <input
        autocomplete="off"
        placeholder="...your product"
        type="text"
      />
      <button>
        Search
      </button>
    </form>
  </section>
</div>
`;

exports[`Plain components renders the searchbar 1`] = `
<div>
  <form
    class="search-bar"
  >
    <input
      autocomplete="off"
      placeholder="...your product"
      type="text"
    />
    <button>
      Search
    </button>
  </form>
</div>
`;
